--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".Principal">
@@ -24,7 +24,7 @@
 
             <Spinner
                 android:id="@+id/EP1"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="23dp"
                 android:layout_marginTop="10dp"
                 android:spinnerMode="dialog" />
@@ -101,7 +101,7 @@
 
             <TextView
                 android:id="@+id/pagamento"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:drawableStart="@drawable/ic_waves"
@@ -119,9 +119,9 @@
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
-                android:autofillHints="10.00"
+                android:importantForAutofill="no"
                 android:ems="10"
-                android:hint="@string/hint"
+                android:hint="@string/hintTroco"
                 android:inputType="number"
                 android:visibility="gone" />
 
@@ -160,7 +160,7 @@
             android:layout_height="20dp"
             android:layout_width="140dp"
             android:layout_marginTop="20dp"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="90dp"
             android:text="@string/totalC" />
 
         <TextView
