Back-End E Front-End finalizado

--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1C1C1C"
+    android:backgroundTint="#FF2B2B2B"
     tools:context=".Inicio">
 
     <ImageView
@@ -30,9 +32,41 @@
         android:layout_marginStart="78dp"
         android:layout_marginEnd="79dp"
         android:layout_marginBottom="84dp"
+        android:background="#E4CAF4"
         android:text="@string/fazer_pedido"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="125dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="22dp"
+        android:background="#FF838383"
+        android:backgroundTint="#FF838383"
+        android:text="@string/gasAgua"
+        android:textColor="@android:color/background_light"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="66dp"
+        android:text="@string/ilus"
+        android:textSize="12sp"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fazerPedido" />
 </androidx.constraintlayout.widget.ConstraintLayout>
